flux/apps/capsule/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
  labels:
    app: caddy
    service: caddy
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: caddy
